# master_thesis

./: .gitignore  classification.ipynb  classification.py  data_extraction.ipynb  eda.ipynb  generate_augmentations.py  minutes_score.ipynb  pc_torch.py  pca_svm.py  pressconference.ipynb  pressconference_augmentations.py  pressconference_torch.ipynb  prompts.py  statements_score.ipynb  test.py
app/backend/: README.md  app.py  pyproject.toml
engine/: __init__.py  expand_transcripts.ipynb  pyproject.toml  readme.md  test.py
engine/engine/: config.py  env.py  logger.py  main.py
engine/engine.egg-info/: PKG-INFO
engine/engine/data/: download_yields.py
engine/engine/prompts/: classification_prompts.py  ranking_prompts.py  summarization_prompts.py  tagging_prompts.py
engine/engine/src/analytics/: scores_visualization.ipynb  statements_analysis.ipynb  temp.html
engine/engine/src/llms/: embedding_cache.py  llm_client.py
engine/engine/src/models/: evaluator.py  pairwise_classifier.py  single_classifier.py
engine/engine/src/processing/: augmentation.py  base.py  classifier.py  data_processor.py  extractor.py  ranker.py  tagger.py  utils.py
engine/engine/src/regressions/: DataForOlehV2.xlsx  data_pipeline.py  ivan_data_pipeline.ipynb  regressions.ipynb  scores_regression.ipynb  utils.py
engine/engine/src/tasks/: classify_statements.py  extract_statements.py  rank_recent_reasonings.py  rank_statements.py  tag_statements.py  train_pairwise.py  train_single.py
engine/engine/src/utils/: graph_utils.py  utils.py
engine/sentiment.egg-info/: PKG-INFO
(+119 files in other folders)
