[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
description = "FED Statement Analysis Engine"
authors = [
    {name = "FED Analysis Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "matplotlib>=3.4.0",
    "langchain>=0.0.200",
    "langchain-openai>=0.0.2",
    "tiktoken>=0.4.0",
    "tqdm>=4.62.0",
    "networkx>=2.6.0",
    "pydantic>=1.9.0",
    "aiolimiter",
    "nest-asyncio",
    "imblearn",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]

[tool.setuptools]
packages = ["engine"] 