[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soroka-backend"
version = "0.1.0"
description = "Backend for Soroka application"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
] 